fast and slow pointer updates

--- a/4.1-fast-and-slow-pointers.md
+++ b/4.1-fast-and-slow-pointers.md
@@ -17,15 +17,15 @@
 	3. if slow meets fast, -> has cycle or a special condition desired
 ## Grokking the Coding Interview
 
-| Difficulty                                 | Problems                                                                                   |                         |
-| ------------------------------------------ | ------------------------------------------------------------------------------------------ | ----------------------- |
-| <span style="color: green;">Easy</span>    | [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/)                 | <input type="checkbox"> |
-| <span style="color: green;">Easy</span>    | [876. Middle of the Linked List](https://leetcode.com/problems/middle-of-the-linked-list/) | <input type="checkbox"> |
-| <span style="color: orange;">Medium</span> | [142. Linked List Cycle II](https://leetcode.com/problems/linked-list-cycle-ii/)           | <input type="checkbox"> |
-| <span style="color: orange;">Medium</span> | [202. Happy Number](https://leetcode.com/problems/happy-number/)                           | <input type="checkbox"> |
-| <span style="color: orange;">Medium</span> | [234. Palindrome Linked List](https://leetcode.com/problems/palindrome-linked-list/)       | <input type="checkbox"> |
-| <span style="color: orange;">Medium</span> |                                                                                            | <input type="checkbox"> |
-| <span style="color: red;">Hard</span>      |                                                                                            | <input type="checkbox"> |
+| #   | Difficulty                                 | Problems                                                                                   |                         |
+| --- | ------------------------------------------ | ------------------------------------------------------------------------------------------ | ----------------------- |
+| 1   | <span style="color: green;">Easy</span>    | [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/)                 | <input type="checkbox"> |
+| 2   | <span style="color: green;">Easy</span>    | [876. Middle of the Linked List](https://leetcode.com/problems/middle-of-the-linked-list/) | <input type="checkbox"> |
+| 3   | <span style="color: orange;">Medium</span> | [142. Linked List Cycle II](https://leetcode.com/problems/linked-list-cycle-ii/)           | <input type="checkbox"> |
+| 4   | <span style="color: orange;">Medium</span> | [202. Happy Number](https://leetcode.com/problems/happy-number/)                           | <input type="checkbox"> |
+| 5   | <span style="color: orange;">Medium</span> | [234. Palindrome Linked List](https://leetcode.com/problems/palindrome-linked-list/)       | <input type="checkbox"> |
+| 6   | <span style="color: orange;">Medium</span> | [143. Reorder List](https://leetcode.com/problems/reorder-list/)                           | <input type="checkbox"> |
+| 7   | <span style="color: red;">Hard</span>      | [457. Circular Array Loop](https://leetcode.com/problems/circular-array-loop/)             | <input type="checkbox"> |
 ## [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/)
 ```python
 # Definition for singly-linked list.
@@ -138,6 +138,14 @@ class Solution:
             fast = squareSum(squareSum(fast))
 
         return fast == 1
+
+       # option 3:
+        slow = getNext(n)
+        fast = getNext(getNext(n))
+        while slow != fast:
+            slow = getNext(slow)
+            fast = getNext(getNext(fast))
+        return slow == 1
 ```
 
 ## [234. Palindrome Linked List](https://leetcode.com/problems/palindrome-linked-list/)
@@ -173,3 +181,58 @@ class Solution:
             right = right.next
         return True
 ```
+## [143. Reorder List](https://leetcode.com/problems/reorder-list/)
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution:
+    def reorderList(self, head: Optional[ListNode]) -> None:
+        """
+        Do not return anything, modify head in-place instead.
+        """
+        if not head:
+            return
+        # 1. find mid
+        # [1,2,3,4,5] -> 3
+        slow = fast = head
+        while fast and fast.next:
+            slow = slow.next
+            fast = fast.next.next
+        # 2. reverse 2nd half
+        # [5, 4, 3]
+        # !Note:
+        # after reversing, the last node of first half is connecting
+        # to the first node of the reversed 2nd half
+        # e.g.
+        # from head: 1->2->3
+        # from tail: 3->4->5->None
+        prev = None
+        while slow:
+            tmp = slow.next
+            slow.next = prev
+            prev = slow
+            slow = tmp
+
+        # 3. merge nodes
+        # [1,2] + [4,3]
+        left, right = head, prev
+        # !Note:
+        # I made a mistake on using while right instead of while right.next,
+        # while right will create cycle in the last node for even length list
+        # e.g.
+        # with while right.next, expected: 1->4->2->3->None
+        # with while right: 1->4->2->3->3->3...
+        while right.next:
+            tmp_left = left.next
+            tmp_right = right.next
+  
+            left.next = right
+            right.next = tmp_left
+  
+            left = tmp_left
+            right = tmp_right
+```
+## [457. Circular Array Loop](https://leetcode.com/problems/circular-array-loop/)
