add one solution to fix sliding window

--- a/5.1-fixed-sliding-window.md
+++ b/5.1-fixed-sliding-window.md
@@ -1,8 +1,8 @@
 # Fixed Sliding Window
 ## Steps
-1. append to window
-2. update res/ans
-3. remove/dequeue from window
+1. into window (add/append/remove)
+2. update result
+3. out of window (remove/dequeue from window or add/append to  window)
 ## Template
 ```python
 def fixedSlidingWindow(self, k, arr):
@@ -79,23 +79,23 @@ class Solution:
 # [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
 ## Fixed Sliding Window Basis
 
-| #   | Difficulty                                      | Problems                                                                                                                                                                                            |                       |                                 |
-| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------- | ------------------------------- |
-| 1   | <span style="color: orange;">Medium</span> 1263 | [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)                                             | #fixed-sliding-window | <input type="checkbox" checked> |
-| 2   | <span style="color: green;">Easy</span>         | [643. Maximum Average Subarray I](https://leetcode.com/problems/maximum-average-subarray-i/)                                                                                                        | #fixed-sliding-window | <input type="checkbox" checked> |
-| 3   | <span style="color: orange;">Medium</span> 1317 | [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/) | #fixed-sliding-window | <input type="checkbox" checked> |
-| 4   | <span style="color: orange;">Medium</span> 1358 | [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)                                                                                                       | #fixed-sliding-window | <input type="checkbox" checked> |
-| 5   | <span style="color: green;">Easy</span> 1360    | [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)                                                       | #fixed-sliding-window | <input type="checkbox" checked> |
-| 6   | <span style="color: orange;">Medium</span> 1546 | [2841. Maximum Sum of Almost Unique Subarray](https://leetcode.com/problems/maximum-sum-of-almost-unique-subarray/)                                                                                 | #fixed-sliding-window | <input type="checkbox" checked> |
-| 7   | <span style="color: orange;">Medium</span> 1553 | [2461. Maximum Sum of Distinct Subarrays With Length K](https://leetcode.com/problems/maximum-sum-of-distinct-subarrays-with-length-k/)                                                             | #fixed-sliding-window | <input type="checkbox" checked> |
-| 8   | <span style="color: orange;">Medium</span> 1574 | [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)                                                                           | #fixed-sliding-window | <input type="checkbox" checked> |
-| 9   | <span style="color: orange;">Medium</span>      | [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/)                                                                                                               | #fixed-sliding-window | <input type="checkbox" checked> |
-| 10  | <span style="color: green;">Easy</span>         | [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)                                                                                                                             | #fixed-sliding-window | <input type="checkbox" checked> |
-| 11  | <span style="color: green;">Easy</span>         | [1176. Diet Plan Performance](https://leetcode.com/problems/diet-plan-performance/)                                                                                                                 | #fixed-sliding-window | <input type="checkbox" checked> |
-| 12  | <span style="color: orange;">Medium</span>      | [1100. Find K-Length Substrings With No Repeated Characters](https://leetcode.com/problems/find-k-length-substrings-with-no-repeated-characters/)                                                   | #fixed-sliding-window | <input type="checkbox" checked> |
-| 13  | <span style="color: orange;">Medium</span>      | [1852. Distinct Numbers in Each Subarray](https://leetcode.com/problems/distinct-numbers-in-each-subarray/)                                                                                         | #fixed-sliding-window | <input type="checkbox" checked> |
-| 14  | <span style="color: orange;">Medium</span>      | [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)                                                                              | #fixed-sliding-window | <input type="checkbox" checked> |
-| 15  | <span style="color: orange;">Medium</span>      | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)                                                           | #fixed-sliding-window | <input type="checkbox">         |
+| #   | Difficulty                                      | Problems                                                                                                                                                                                            |                       |                                                                                                                                           |
+| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
+| 1   | <span style="color: orange;">Medium</span> 1263 | [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 2   | <span style="color: green;">Easy</span>         | [643. Maximum Average Subarray I](https://leetcode.com/problems/maximum-average-subarray-i/)                                                                                                        | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 3   | <span style="color: orange;">Medium</span> 1317 | [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/) | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 4   | <span style="color: orange;">Medium</span> 1358 | [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)                                                                                                       | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 5   | <span style="color: green;">Easy</span> 1360    | [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)                                                       | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 6   | <span style="color: orange;">Medium</span> 1546 | [2841. Maximum Sum of Almost Unique Subarray](https://leetcode.com/problems/maximum-sum-of-almost-unique-subarray/)                                                                                 | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 7   | <span style="color: orange;">Medium</span> 1553 | [2461. Maximum Sum of Distinct Subarrays With Length K](https://leetcode.com/problems/maximum-sum-of-distinct-subarrays-with-length-k/)                                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 8   | <span style="color: orange;">Medium</span> 1574 | [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)                                                                           | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 9   | <span style="color: orange;">Medium</span>      | [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/)                                                                                                               | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 10  | <span style="color: green;">Easy</span>         | [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)                                                                                                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 11  | <span style="color: green;">Easy</span>         | [1176. Diet Plan Performance](https://leetcode.com/problems/diet-plan-performance/)                                                                                                                 | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 12  | <span style="color: orange;">Medium</span>      | [1100. Find K-Length Substrings With No Repeated Characters](https://leetcode.com/problems/find-k-length-substrings-with-no-repeated-characters/)                                                   | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 13  | <span style="color: orange;">Medium</span>      | [1852. Distinct Numbers in Each Subarray](https://leetcode.com/problems/distinct-numbers-in-each-subarray/)                                                                                         | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 14  | <span style="color: orange;">Medium</span>      | [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)                                                                              | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
+| 15  | <span style="color: orange;">Medium</span>      | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)                                                           | #fixed-sliding-window | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/) |
 
 ###  [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)
 ```python
@@ -519,6 +519,21 @@ class Solution:
 ### [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)
 The main point of this problem is to figure out the number of swap is the same as number of 0s in the window, which I learned from https://www.youtube.com/watch?v=VXi_-2CmitM
 ```python
+# Input: data = [1,0,1,0,1]
+# Output: 1
+# Explanation: There are 3 ways to group all 1's together:
+# [1,1,1,0,0] using 1 swap.
+# [0,1,1,1,0] using 2 swaps.
+# [0,0,1,1,1] using 1 swap.
+# The minimum is 1.
+
+# Input: data = [0,0,0,1,0]
+# Output: 0
+# Explanation: Since there is only one 1 in the array, no swaps are needed.
+
+# Input: data = [1,0,1,0,1,0,0,1,1,0,1]
+# Output: 3
+# Explanation: One possible solution that uses 3 swaps is [0,0,0,0,0,1,1,1,1,1,1].
 class Solution:
     def minSwaps(self, data: List[int]) -> int:
         # main idea:
@@ -544,5 +559,96 @@ class Solution:
             # 3. dequeue
             if data[i - k + 1] == 0:
                 window -= 1
+        return res
+```
+### [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)
+This problem is interesting because unlike the other problems, this one can be resolve in a different way. 
+
+Usually I think of the steps are 
+	append -> update -> dequeue, 
+not saying this way is not able to solve this, however, it is easier to understand if the flow is 
+	into window -> update -> out of window, which leads to 
+	remove -> update -> append. 
+
+if we want to resolve this with append -> update -> dequeue, we will need to use one more counter to keep track of the unique nums in the window then subtract this from the all unique nums to update the result.
+```python
+# Input: candies = [1,2,2,3,4,3], k = 3
+# Output: 3
+# Explanation:
+# Give the candies in the range [1, 3] (inclusive) with flavors [2,2,3].
+# You can eat candies with flavors [1,4,3].
+# There are 3 unique flavors, so return 3.
+
+# Input: candies = [2,2,2,2,3,3], k = 2
+# Output: 2
+# Explanation:
+# Give the candies in the range [3, 4] (inclusive) with flavors [2,3].
+# You can eat candies with flavors [2,2,2,3].
+# There are 2 unique flavors, so return 2.
+# Note that you can also share the candies with flavors [2,2] and eat the candies with flavors [2,2,3,3].
+
+# Input: candies = [2,4,5], k = 0
+# Output: 3
+# Explanation:
+# You do not have to give any candies.
+# You can eat the candies with flavors [2,4,5].
+# There are 3 unique flavors, so return 3.
+
+# remove -> update -> add solution
+class Solution:
+    def shareCandies(self, candies: List[int], k: int) -> int:
+	    # idea:
+	    # hold a counter for all the nums
+	    # 1. remove from the counter
+	    # 2. update result base on counter len
+	    # 3. add back to counter
+        res = 0
+        all_uniques = Counter(candies)
+        if k == 0:
+            return len(all_uniques)
+        for i, num in enumerate(candies):
+            # 1. into window
+            all_uniques[num] -= 1
+            # remove the key
+            if all_uniques[num] == 0:
+                all_uniques.pop(num)
+            # extend to window size
+            if i < k - 1:
+                continue
+            # 2. update
+            res = max(res, len(all_uniques))
+            # 3. outoff window
+            num_to_remove = candies[i - k + 1]
+            all_uniques[num_to_remove] = all_uniques.get(num_to_remove, 0) + 1
+        return res
+
+# add -> update -> remove solution
+# note: only update the window when the freq is matching
+class Solution:
+    def shareCandies(self, candies: List[int], k: int) -> int:
+        res = 0
+        all_uniques = Counter(candies)
+        uniques_num = len(all_uniques)
+        if k == 0:
+            return uniques_num
+        window_uniques = Counter()
+        window = 0
+        for i, num in enumerate(candies):
+            # 1. into window
+            window_uniques[num] = window_uniques.get(num, 0) + 1
+            if window_uniques[num] == all_uniques[num]:
+                window += 1
+            # extend to window size
+            if i < k - 1:
+                continue
+            # 2. update
+            res = max(res, uniques_num - window)
+            # 3. out of window
+            num_to_remove = candies[i - k + 1]
+            if window_uniques[num_to_remove] == all_uniques[num_to_remove]:
+                window -= 1
+            window_uniques[num_to_remove] -= 1
+            if window_uniques[num_to_remove] == 0:
+                window_uniques.pop(num_to_remove)
         return res
 ```
