--- a/5.1-fixed-sliding-window.md
+++ b/5.1-fixed-sliding-window.md
@@ -79,23 +79,23 @@ class Solution:
 # [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
 ## Fixed Sliding Window Basis
 
-| #   | Difficulty                                      | Problems                                                                                                                                                                                            |                       |                                                                                                                                           |
-| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
-| 1   | <span style="color: orange;">Medium</span> 1263 | [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 2   | <span style="color: green;">Easy</span>         | [643. Maximum Average Subarray I](https://leetcode.com/problems/maximum-average-subarray-i/)                                                                                                        | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 3   | <span style="color: orange;">Medium</span> 1317 | [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/) | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 4   | <span style="color: orange;">Medium</span> 1358 | [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)                                                                                                       | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 5   | <span style="color: green;">Easy</span> 1360    | [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)                                                       | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 6   | <span style="color: orange;">Medium</span> 1546 | [2841. Maximum Sum of Almost Unique Subarray](https://leetcode.com/problems/maximum-sum-of-almost-unique-subarray/)                                                                                 | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 7   | <span style="color: orange;">Medium</span> 1553 | [2461. Maximum Sum of Distinct Subarrays With Length K](https://leetcode.com/problems/maximum-sum-of-distinct-subarrays-with-length-k/)                                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 8   | <span style="color: orange;">Medium</span> 1574 | [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)                                                                           | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 9   | <span style="color: orange;">Medium</span>      | [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/)                                                                                                               | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 10  | <span style="color: green;">Easy</span>         | [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)                                                                                                                             | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 11  | <span style="color: green;">Easy</span>         | [1176. Diet Plan Performance](https://leetcode.com/problems/diet-plan-performance/)                                                                                                                 | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 12  | <span style="color: orange;">Medium</span>      | [1100. Find K-Length Substrings With No Repeated Characters](https://leetcode.com/problems/find-k-length-substrings-with-no-repeated-characters/)                                                   | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 13  | <span style="color: orange;">Medium</span>      | [1852. Distinct Numbers in Each Subarray](https://leetcode.com/problems/distinct-numbers-in-each-subarray/)                                                                                         | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 14  | <span style="color: orange;">Medium</span>      | [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)                                                                              | #fixed-sliding-window | <input type="checkbox" checked>                                                                                                           |
-| 15  | <span style="color: orange;">Medium</span>      | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)                                                           | #fixed-sliding-window | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/) |
+| #   | Difficulty                                      | Problems                                                                                                                                                                                            |                       |                                 |
+| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------- | ------------------------------- |
+| 1   | <span style="color: orange;">Medium</span> 1263 | [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)                                             | #fixed-sliding-window | <input type="checkbox" checked> |
+| 2   | <span style="color: green;">Easy</span>         | [643. Maximum Average Subarray I](https://leetcode.com/problems/maximum-average-subarray-i/)                                                                                                        | #fixed-sliding-window | <input type="checkbox" checked> |
+| 3   | <span style="color: orange;">Medium</span> 1317 | [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/) | #fixed-sliding-window | <input type="checkbox" checked> |
+| 4   | <span style="color: orange;">Medium</span> 1358 | [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)                                                                                                       | #fixed-sliding-window | <input type="checkbox" checked> |
+| 5   | <span style="color: green;">Easy</span> 1360    | [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)                                                       | #fixed-sliding-window | <input type="checkbox" checked> |
+| 6   | <span style="color: orange;">Medium</span> 1546 | [2841. Maximum Sum of Almost Unique Subarray](https://leetcode.com/problems/maximum-sum-of-almost-unique-subarray/)                                                                                 | #fixed-sliding-window | <input type="checkbox" checked> |
+| 7   | <span style="color: orange;">Medium</span> 1553 | [2461. Maximum Sum of Distinct Subarrays With Length K](https://leetcode.com/problems/maximum-sum-of-distinct-subarrays-with-length-k/)                                                             | #fixed-sliding-window | <input type="checkbox" checked> |
+| 8   | <span style="color: orange;">Medium</span> 1574 | [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)                                                                           | #fixed-sliding-window | <input type="checkbox" checked> |
+| 9   | <span style="color: orange;">Medium</span>      | [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/)                                                                                                               | #fixed-sliding-window | <input type="checkbox" checked> |
+| 10  | <span style="color: green;">Easy</span>         | [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)                                                                                                                             | #fixed-sliding-window | <input type="checkbox" checked> |
+| 11  | <span style="color: green;">Easy</span>         | [1176. Diet Plan Performance](https://leetcode.com/problems/diet-plan-performance/)                                                                                                                 | #fixed-sliding-window | <input type="checkbox" checked> |
+| 12  | <span style="color: orange;">Medium</span>      | [1100. Find K-Length Substrings With No Repeated Characters](https://leetcode.com/problems/find-k-length-substrings-with-no-repeated-characters/)                                                   | #fixed-sliding-window | <input type="checkbox" checked> |
+| 13  | <span style="color: orange;">Medium</span>      | [1852. Distinct Numbers in Each Subarray](https://leetcode.com/problems/distinct-numbers-in-each-subarray/)                                                                                         | #fixed-sliding-window | <input type="checkbox" checked> |
+| 14  | <span style="color: orange;">Medium</span>      | [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)                                                                              | #fixed-sliding-window | <input type="checkbox" checked> |
+| 15  | <span style="color: orange;">Medium</span>      | [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)                                                           | #fixed-sliding-window | <input type="checkbox" checked> |
 
 ###  [1456. Maximum Number of Vowels in a Substring of Given Length](https://leetcode.com/problems/maximum-number-of-vowels-in-a-substring-of-given-length/)
 ```python
