--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -9,10 +9,10 @@ There are 3 types of flexible sliding window problems:
 ### template
 #### Not using hash set
 1. into window
-2. out of window
+2. out of window (shrink window till it's valid)
 3. update res
 #### Using hash set:
-1. out of window
+1. out of window (shrink window till it's valid)
 2. into window
 3. update res
 
@@ -26,8 +26,8 @@ There are 3 types of flexible sliding window problems:
 | 6   | <span style="color: orange;">Medium</span> 1529 | [1695. Maximum Erasure Value](https://leetcode.com/problems/maximum-erasure-value/)                                                             | #flexible-sliding-window | <input type="checkbox" checked> |
 | 7   | <span style="color: orange;">Medium</span> 1535 | [2958. Length of Longest Subarray With at Most K Frequency](https://leetcode.com/problems/length-of-longest-subarray-with-at-most-k-frequency/) | #flexible-sliding-window | <input type="checkbox" checked> |
 | 8   | <span style="color: orange;">Medium</span> 1643 | [2024. Maximize the Confusion of an Exam](https://leetcode.com/problems/maximize-the-confusion-of-an-exam/)                                     | #flexible-sliding-window | <input type="checkbox" checked> |
-| 9   | <span style="color: orange;">Medium</span> 1656 | [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)                                                       | #flexible-sliding-window | <input type="checkbox">         |
-| 10  | <span style="color: orange;">Medium</span> 1817 | [1658. Minimum Operations to Reduce X to Zero](https://leetcode.com/problems/minimum-operations-to-reduce-x-to-zero/)                           | #flexible-sliding-window | <input type="checkbox">         |
+| 9   | <span style="color: orange;">Medium</span> 1656 | [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)                                                       | #flexible-sliding-window | <input type="checkbox" checked> |
+| 10  | <span style="color: orange;">Medium</span> 1817 | [1658. Minimum Operations to Reduce X to Zero](https://leetcode.com/problems/minimum-operations-to-reduce-x-to-zero/)                           | #flexible-sliding-window | <input type="checkbox" checked> |
 ### [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
 We should remove and update left while we found a visited char, I made a mistake on thinking about removing till `left == right` -> `while s[left] != s[right]`.
 ```python
@@ -282,4 +282,76 @@ class Solution:
                 visited[answerKey[right - res]] -= 1
         return res
 
+```
+### [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)
+Note: this problem can be resolved without following the template to shrink the window and update the result every time.
+#### solution with template
+```python
+# Input: nums = [1,1,1,0,0,0,1,1,1,1,0], k = 2
+# Output: 6
+# Explanation:** [1,1,1,0,0,**1**,1,1,1,1,**1**]
+# Bolded numbers were flipped from 0 to 1. The longest subarray is underlined.
+
+# Input: nums = [0,0,1,1,0,0,1,1,1,0,1,1,0,0,0,1,1,1,1], k = 3
+# Output: 10
+# Explanation: [0,0,1,1,**1**,**1**,1,1,1,**1**,1,1,0,0,0,1,1,1,1]
+# Bolded numbers were flipped from 0 to 1. The longest subarray is underlined.
+class Solution:
+    def longestOnes(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        zeros = left = res = 0
+        for right in range(n):
+            # 1. into window
+            if nums[right] == 0:
+                zeros += 1
+            # 2. shrink window til valid
+            while zeros > k:
+                if nums[left] == 0:
+                    zeros -= 1
+                left += 1
+            # 3. update res
+            res = max(res, right - left + 1)
+        return res
+```
+#### solution without template
+```python
+class Solution:
+    def longestOnes(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        zeros = left = 0
+        for right in range(n):
+            if nums[right] == 0:
+                zeros += 1
+            if zeros > k:
+                if nums[left] == 0:
+                    zeros -= 1
+                left += 1
+        return right - left + 1
+```
+### [1658. Minimum Operations to Reduce X to Zero](https://leetcode.com/problems/minimum-operations-to-reduce-x-to-zero/)
+Key note:
+The problem ask to 
+	find the min num of elements that makes `x = 0`, by taking elements from start and end
+this is tricky and not obvious a sliding window problem, 
+but it is if we change the problem a bit to
+	find the min num of elements that adds up to `Sum(arr) - x`
+```python
+class Solution:
+    def minOperations(self, nums: List[int], x: int) -> int:
+        n = len(nums)
+        target = sum(nums) - x
+        window = left = res = 0
+        for right in range(n):
+            # into window
+            window += nums[right]
+            # shrink window till valid
+            while left <= right and window > target:
+                window -= nums[left]
+                left += 1
+            # update res
+            if window == target:
+                res = max(res, right - left + 1)
+        # res is the # of elements adds up to sum(nums)
+        # we need to return the toal - res for the # of elements makes x = 0
+        return -1 if res == 0 else n - res
 ```
