--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -9,7 +9,8 @@ There are 3 types of flexible sliding window problems:
 ### template
 #### Not using hash set
 1. into window
-2. out of window (shrink window till it's valid)
+2. while invalid
+	1. out of window (shrink window till it's valid)
 3. update res
 #### Using hash set:
 1. out of window (shrink window till it's valid)
@@ -354,4 +355,77 @@ class Solution:
         # res is the # of elements adds up to sum(nums)
         # we need to return the toal - res for the # of elements makes x = 0
         return -1 if res == 0 else n - res
+```
+
+## Flexible Sliding Window Basis (minimum/shortest)
+### Template
+1. into window
+2. while **valid**
+	1. update res
+	2. shrink window
+
+| #   | Difficulty                                      | Problems                                                                                                                                                  |                          |                                 |
+| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------ | ------------------------------- |
+| 1   | <span style="color: orange;">Medium</span>      | [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/)                                                                | #flexible-sliding-window | <input type="checkbox" checked> |
+| 2   | <span style="color: orange;">Medium</span>      | [2904. Shortest and Lexicographically Smallest Beautiful String](https://leetcode.com/problems/shortest-and-lexicographically-smallest-beautiful-string/) | #flexible-sliding-window | <input type="checkbox" checked> |
+| 3   | <span style="color: orange;">Medium</span> 1878 | [1234. Replace the Substring for Balanced String](https://leetcode.com/problems/replace-the-substring-for-balanced-string/)                               | #flexible-sliding-window | <input type="checkbox">         |
+| 4   | <span style="color: orange;">Medium</span> 1914 | [2875. Minimum Size Subarray in Infinite Array](https://leetcode.com/problems/minimum-size-subarray-in-infinite-array/)                                   | #flexible-sliding-window | <input type="checkbox">         |
+| 5   | <span style="color: red;">Hard</span>           | [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/)                                                                   | #flexible-sliding-window | <input type="checkbox">         |
+| 6   | <span style="color: red;">Hard</span>           | [632. Smallest Range Covering Elements from K Lists](https://leetcode.com/problems/smallest-range-covering-elements-from-k-lists/)                        | #flexible-sliding-window | <input type="checkbox">         |
+### [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/)
+```python
+# Input: target = 7, nums = [2,3,1,2,4,3]
+# Output: 2
+# Explanation: The subarray [4,3] has the minimal length under the problem constraint.
+
+# Input: target = 4, nums = [1,4,4]
+# Output: 1
+
+# Input: target = 11, nums = [1,1,1,1,1,1,1,1]
+# Output: 0
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        n = len(nums)
+        window = left = 0
+        res = float('inf')
+        for right in range(n):
+            # into window
+            window += nums[right]
+            while window >= target:
+                # update res
+                res = min(res, right - left + 1)
+                # shrink window
+                window -= nums[left]
+                left += 1
+        return 0 if res == float('inf') else res
+```
+### [2904. Shortest and Lexicographically Smallest Beautiful String](https://leetcode.com/problems/shortest-and-lexicographically-smallest-beautiful-string/)
+Note:
+on updating the result, because we want the smallest binary, so when the length is the same, we need to compare the binaries.
+question remain:
+I tried combining the two conditions to always check for min binary, not sure why it does not work, perhaps it's because the initial `res_str` is empty string
+```python
+class Solution:
+    def shortestBeautifulSubstring(self, s: str, k: int) -> str:
+        n = len(s)
+        left = 0
+        min_len = float('INF')
+        res_str = ''
+        for right in range(n):
+            # into window
+            k -= int(s[right])
+            while k <= 0:
+                # update res
+                if k == 0:
+                    if right - left < min_len:
+                        min_len = right - left
+                        res_str = s[left:right + 1]
+                    # ***pick the smaller binary
+                    elif right - left == min_len:
+                        min_len = right - left
+                        res_str = min(res_str, s[left:right + 1])
+                # shrink window
+                k += int(s[left])
+                left += 1
+        return res_str
 ```
