add one solution for min flexible sliding window problem

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -429,3 +429,38 @@ class Solution:
                 left += 1
         return res_str
 ```
+### [1234. Replace the Substring for Balanced String](https://leetcode.com/problems/replace-the-substring-for-balanced-string/)
+#### Idea
+Question already told us the balance requirement is each characters appears `n/4` times, so this is the validation for the while loop.
+1. into window -> decrease the count
+2. while balance (i.e. each char in counts <= `n/4`)
+	1. update min res
+	2. shrink window
+```python
+class Solution:
+    def balancedString(self, s: str) -> int:
+        n = len(s)
+        # main validation
+        target = n // 4
+        counts = Counter(s)
+        # if already balance
+        if all(counts[char] <= target for char in 'QWER'):
+        # same as
+        # if max(counts.values()) <= target:
+            return 0
+        left = 0
+        res = n
+        for right in range(n):
+            # into window
+            counts[s[right]] -= 1
+            # while each count is <= target
+            while all(counts[char] <= target for char in 'QWER'):
+            # can use below check as well
+            # while max(counts.values()) <= target:
+                # update res
+                res = min(res, right - left + 1)
+                # shrink window
+                counts[s[left]] += 1
+                left += 1
+        return res
+```
