add 3 flexible sliding window problems

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -9,7 +9,7 @@ There are 3 types of flexible sliding window problems:
 ### template
 #### Not using hash set
 1. into window
-2. while invalid
+2. while **invalid**
 	1. out of window (shrink window till it's valid)
 3. update res
 #### Using hash set:
@@ -368,10 +368,10 @@ class Solution:
 | --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------ | ------------------------------- |
 | 1   | <span style="color: orange;">Medium</span>      | [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/)                                                                | #flexible-sliding-window | <input type="checkbox" checked> |
 | 2   | <span style="color: orange;">Medium</span>      | [2904. Shortest and Lexicographically Smallest Beautiful String](https://leetcode.com/problems/shortest-and-lexicographically-smallest-beautiful-string/) | #flexible-sliding-window | <input type="checkbox" checked> |
-| 3   | <span style="color: orange;">Medium</span> 1878 | [1234. Replace the Substring for Balanced String](https://leetcode.com/problems/replace-the-substring-for-balanced-string/)                               | #flexible-sliding-window | <input type="checkbox">         |
-| 4   | <span style="color: orange;">Medium</span> 1914 | [2875. Minimum Size Subarray in Infinite Array](https://leetcode.com/problems/minimum-size-subarray-in-infinite-array/)                                   | #flexible-sliding-window | <input type="checkbox">         |
-| 5   | <span style="color: red;">Hard</span>           | [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/)                                                                   | #flexible-sliding-window | <input type="checkbox">         |
-| 6   | <span style="color: red;">Hard</span>           | [632. Smallest Range Covering Elements from K Lists](https://leetcode.com/problems/smallest-range-covering-elements-from-k-lists/)                        | #flexible-sliding-window | <input type="checkbox">         |
+| 3   | <span style="color: orange;">Medium</span> 1878 | [1234. Replace the Substring for Balanced String](https://leetcode.com/problems/replace-the-substring-for-balanced-string/)                               | #flexible-sliding-window | <input type="checkbox" checked> |
+| 4   | <span style="color: orange;">Medium</span> 1914 | *** [2875. Minimum Size Subarray in Infinite Array](https://leetcode.com/problems/minimum-size-subarray-in-infinite-array/)                               | #flexible-sliding-window | <input type="checkbox" checked> |
+| 5   | <span style="color: red;">Hard</span>           | [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/)                                                                   | #flexible-sliding-window | <input type="checkbox" checked> |
+| 6   | <span style="color: red;">Hard</span>           | *** [632. Smallest Range Covering Elements from K Lists](https://leetcode.com/problems/smallest-range-covering-elements-from-k-lists/)                    | #flexible-sliding-window | <input type="checkbox" checked> |
 ### [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/)
 ```python
 # Input: target = 7, nums = [2,3,1,2,4,3]
@@ -405,6 +405,18 @@ on updating the result, because we want the smallest binary, so when the length 
 question remain:
 I tried combining the two conditions to always check for min binary, not sure why it does not work, perhaps it's because the initial `res_str` is empty string
 ```python
+# Input: s = "100011001", k = 3
+# Output: "11001"
+# Explanation: There are 7 beautiful substrings in this example:
+# 1. The substring "100011001".
+# 2. The substring "100011001".
+# 3. The substring "100011001".
+# 4. The substring "100011001".
+# 5. The substring "100011001".
+# 6. The substring "100011001".
+# 7. The substring "100011001".
+# The length of the shortest beautiful substring is 5.
+# The lexicographically smallest beautiful substring with length 5 is the substring "11001".
 class Solution:
     def shortestBeautifulSubstring(self, s: str, k: int) -> str:
         n = len(s)
@@ -437,6 +449,17 @@ Question already told us the balance requirement is each characters appears `n/4
 	1. update min res
 	2. shrink window
 ```python
+# Input: s = "QWER"
+# Output: 0
+# Explanation: s is already balanced.
+
+# Input: s = "QQWE"
+# Output: 1
+# Explanation: We need to replace a 'Q' to 'R', so that "RQWE" (or "QRWE") is balanced.
+
+# Input: s = "QQQW"
+# Output: 2
+# Explanation: We can replace the first "QQ" to "ER".
 class Solution:
     def balancedString(self, s: str) -> int:
         n = len(s)
@@ -463,4 +486,153 @@ class Solution:
                 counts[s[left]] += 1
                 left += 1
         return res
+```
+### [2875. Minimum Size Subarray in Infinite Array](https://leetcode.com/problems/minimum-size-subarray-in-infinite-array/)
+#### Idea
+[solution](https://leetcode.cn/problems/minimum-size-subarray-in-infinite-array/solutions/2464878/hua-dong-chuang-kou-on-shi-jian-o1-kong-cqawc)
+Consider target is bigger than total and we need multiple `total` to sum up to `target`, if we remove `k` number of `nums`, the rest we need is just the remainder, then we can convert this problem as below:
+
+find the shortest subarray which sums up to `remainder` in `nums + nums` where all `num` are positive, which is a sliding window problem.
+
+Let `target = k * total + remainder`,
+where 
+`total = sum(nums)`, 
+`remainder = target mod total`, 
+`k = target // total`,
+the ultimate result is `res + k * n`
+
+Note: This looks like a 
+
+```python
+# Input: nums = [1,2,3], target = 5
+# Output: 2
+# Explanation: In this example infinite_nums = [1,2,3,1,2,3,1,2,...].
+# The subarray in the range [1,2], has the sum equal to target = 5 and length = 2.
+# It can be proven that 2 is the shortest length of a subarray with sum equal to target = 5.
+
+# Input: nums = [1,1,1,2,3], target = 4
+# Output: 2
+# Explanation: In this example infinite_nums = [1,1,1,2,3,1,1,1,2,3,1,1,...].
+# The subarray in the range [4,5], has the sum equal to target = 4 and length = 2.
+# It can be proven that 2 is the shortest length of a subarray with sum equal to target = 4.
+
+# Input: nums = [2,4,6,8], target = 3
+# Output: -1
+# Explanation: In this example infinite_nums = [2,4,6,8,2,4,6,8,...].
+# It can be proven that there is no subarray with sum equal to target = 3.
+class Solution:
+    def minSizeSubarray(self, nums: List[int], target: int) -> int:
+        n = len(nums)
+        total = sum(nums)
+        k = target // total  # number of nums we need
+        remainder = target % total  # the parthial target we are looking for
+        res = inf  # the parthial sum we are looking for
+        left = window = 0
+        for right in range(n * 2):
+            # into window
+            window += nums[right % n]
+            # shrink window
+            while window > remainder:
+                window -= nums[left % n]
+                left += 1
+            # update res
+            if window == remainder:
+                res = min(res, right - left + 1)
+        # ultimate result = res + k * n
+        return res + k * n if res < inf else -1
+```
+### [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/)
+```python
+# Input: s = "ADOBECODEBANC", t = "ABC"
+# Output: "BANC"
+# Explanation: The minimum window substring "BANC" includes 'A', 'B', and 'C' from string t.
+
+# Input: s = "a", t = "a"
+# Output: "a"
+# Explanation: The entire string s is the minimum window.
+
+# Input: s = "a", t = "aa"
+# Output: ""
+# Explanation: Both 'a's from t must be included in the window.
+# Since the largest window of s only has one 'a', return empty string.
+class Solution:
+    def minWindow(self, s: str, t: str) -> str:
+        n = len(s)
+        count_t = Counter(t)
+        count_s = Counter()
+        left = 0
+        left_idx, right_idx = -1, n
+        for right in range(n):
+            # into window
+            count_s[s[right]] += 1
+            # while valid
+            # note: comparing two counters, 
+            # python will ignore the key only appears in one hashmap
+            while count_s >= count_t:
+                # update res
+                if right - left < right_idx - left_idx:
+                    right_idx, left_idx = right, left
+                # shrink window
+                count_s[s[left]] -= 1
+                left += 1
+        return s[left_idx: right_idx + 1] if left_idx != -1 else ''
+```
+### [632. Smallest Range Covering Elements from K Lists](https://leetcode.com/problems/smallest-range-covering-elements-from-k-lists/)
+#### Idea
+In the example we have 3 arrays
+- `[4,10,15,24,26]`,
+- `[0,9,12,20]`,
+- `[5,18,22,30]`
+Combine these arrays and sort it we get
+		num: 0  4  5  9  10  12  15  18  20  22  24  26  30
+idx of the array: 1  0  2  1   0    1    0    2    1    2    0   0    2
+
+which can be an array of pairs
+`pairs = [(0, 1), (4, 0), (5, 2),...,(24, 0, (26, 0), (30, 2))]`
+
+The valid window definition is as below:
+the continuous subarray which includes the index of the array `0, 1, 2,..., k-1`
+#### Key notes
+1. a counter `counts` to track the frequency of the indies
+	1. whenever we first encounter the index, we decrease the total number of nums which is `len(nums)` which leads to `n -= 1`
+2. to check if window is valid, we can check if all `counts[i] > 0`, i.e. `n == 0`
+
+```python
+# Input: nums = [[4,10,15,24,26],[0,9,12,20],[5,18,22,30]]
+# Output: [20,24]
+# Explanation:
+# List 1: [4, 10, 15, 24,26], 24 is in range [20,24].
+# List 2: [0, 9, 12, 20], 20 is in range [20,24].
+# List 3: [5, 18, 22, 30], 22 is in range [20,24].
+
+# Input: nums = [[1,2,3],[1,2,3],[1,2,3]]
+# Output: [1,1]
+class Solution:
+    def smallestRange(self, nums: List[List[int]]) -> List[int]:
+        # creates a sorted pairs array which has
+        # pairs (<num in arr of nums>, <idx of the nums arr>)
+        pairs = sorted((x, i) for (i, arr) in enumerate(nums) for x in arr)
+        res_left, res_right = -inf, inf
+        n = len(nums)
+        counts = [0] * n
+        left = 0
+        for right, i in pairs:
+            # includes nums[i] in window
+            if counts[i] == 0:
+                n -= 1
+            # into window
+            counts[i] += 1
+            # while we have atleast 1 num in each arr
+            while n == 0:
+                curr_left, idx = pairs[left]
+                # update res
+                if right - curr_left < res_right - res_left:
+                    res_left, res_right = curr_left, right
+                # shrink window
+                left += 1
+                counts[idx] -= 1
+                # exclude nums[i] in window
+                if counts[idx] == 0:
+                    n += 1
+        return [res_left, res_right]
 ```
