add 1 improved solution for flexible sliding window

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -38,18 +38,51 @@ We should remove and update left while we found a visited char, I made a mistake
 class Solution:
     def lengthOfLongestSubstring(self, s: str) -> int:
         n = len(s)
-        left = res = window = 0
+        left = res = 0
         visited = set()
         for right in range(n):
+	        # while invalid
             while s[right] in visited:
+                # shrink window
                 visited.remove(s[left])
-                window -= 1
                 left += 1
+            # into window
             visited.add(s[right])
-            window += 1
-            res = max(res, window)
+            # update res
+            res = max(res, right - left + 1)
         return res
 ```
+
+#### Improved version
+##### Idea
+If we store the index of the visited, we can shrink the window in instant time, so we improved it from `O(2n)` to `O(n)`, space is the same as `O(min(m,n))` where `m` is the num of alphabet, `n` is  `len(s)`
+##### Note
+For `Input: s = "abba"`,
+
+I made a mistake on always updating `left = visited[c] + 1`, however, there's a case that, left is bigger than `visited[c] + 1`, above case will fail to return `3` instead of `2`, because on 2nd last iteration, left is updated to be `2` since `b` visited 2 times, without picking the `max(left, visited[c] + 1)`, on last iteration, `a` visited index is `0`, left will be updated to be `0 + 1` instead of `2`, leads to the wrong output `3 - 1 + 1 = 3`.
+
+2nd last iteration:
+right on 2nd b, left = 1 + 1 = 2
+last iteration:
+right on 2nd a, left = 0 + 1 = 1
+
+```python
+class Solution:
+    def lengthOfLongestSubstring(self, s: str) -> int:
+        left = res = 0
+        visited = defaultdict()
+        for right, c in enumerate(s):
+            # if invalid
+            if c in visited:
+                # shrink window
+                left = max(left, visited[c] + 1)
+            # update res
+            res = max(res, right - left + 1)
+            # into window
+            visited[c] = right
+        return res
+```
+
 ### [3090. Maximum Length Substring With Two Occurrences](https://leetcode.com/problems/maximum-length-substring-with-two-occurrences/)
 ```python
 # Input: s = "bcbbbcba"
